--- a/starter-code/views/courses/index.ejs
+++ b/starter-code/views/courses/index.ejs
@@ -21,7 +21,7 @@
 </br>
 <% if(!user) { %>
   <ul>
-    <li><a href="/login">Login</a></li>
+    <li><a href="../auth/login">Login</a></li>
   </ul>
 <% } %>
 </br>
