--- a/starter-code/views/index.ejs
+++ b/starter-code/views/index.ejs
@@ -26,6 +26,8 @@
   <a href="/auth/logout">Logout</a>
   <% if(user.role === 'Boss') { %>
     <a href="/auth/addUser">Add User</a>
+    <% } else if (user.role === 'TA') { %>
+      <a href="/profiles/index">See Profiles</a>
     <% } %>
 <% } %>
 
